tests/baselines/reference/lift.errors.txt
==== tests/cases/compiler/lift.ts (4 errors) ====
    class B {
        constructor(public y:number) {
        }
        public ll:number;  // to be shadowed
    }
    
    class C extends B {
        constructor(y:number,z:number,w:number) {
            super(y)
            var x=10+w;
            var ll=x*w;
        }
    
        public liftxyz () { return x+z+this.y; }
                                   ~
!!! error TS2095: Could not find symbol 'x'.
                                     ~
!!! error TS2095: Could not find symbol 'z'.
        public liftxylocllz () { return x+z+this.y+this.ll; }
                                        ~
!!! error TS2095: Could not find symbol 'x'.
                                          ~
!!! error TS2095: Could not find symbol 'z'.
    }
    